[gd_scene load_steps=22 format=3 uid="uid://b8obav23g0xg5"]

[ext_resource type="Texture2D" uid="uid://c3nlh8d1qqps1" path="res://Assets/Darren Rogers.png" id="1_o5y01"]
[ext_resource type="Script" path="res://darren_rogers.gd" id="1_q7skm"]
[ext_resource type="Texture2D" uid="uid://fitkvm6f0n3q" path="res://Assets/player_arms_gun.png" id="3_62cyl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pgbed"]
size = Vector2(10, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yw4nh"]
size = Vector2(10, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_eupgu"]
atlas = ExtResource("1_o5y01")
region = Rect2(96, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvknk"]
atlas = ExtResource("1_o5y01")
region = Rect2(112, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq5er"]
atlas = ExtResource("1_o5y01")
region = Rect2(128, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8cl1"]
atlas = ExtResource("1_o5y01")
region = Rect2(144, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mk7je"]
atlas = ExtResource("1_o5y01")
region = Rect2(176, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fc82r"]
atlas = ExtResource("1_o5y01")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_45ccu"]
atlas = ExtResource("1_o5y01")
region = Rect2(160, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yy0p7"]
atlas = ExtResource("1_o5y01")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8prg"]
atlas = ExtResource("1_o5y01")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7tpi"]
atlas = ExtResource("1_o5y01")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmo7n"]
atlas = ExtResource("1_o5y01")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_de43o"]
atlas = ExtResource("1_o5y01")
region = Rect2(64, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2lgo5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eupgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvknk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq5er")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8cl1")
}],
"loop": true,
"name": &"crawling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mk7je")
}],
"loop": true,
"name": &"crouch jumping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fc82r")
}],
"loop": true,
"name": &"crouching",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_45ccu")
}],
"loop": true,
"name": &"jumping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yy0p7")
}],
"loop": true,
"name": &"standing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8prg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7tpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmo7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_de43o")
}],
"loop": true,
"name": &"walking",
"speed": 9.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hi6p2"]
size = Vector2(1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2f5t"]
atlas = ExtResource("3_62cyl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_je25u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2f5t")
}],
"loop": true,
"name": &"gun",
"speed": 5.0
}]

[node name="Darren Rogers" type="CharacterBody2D"]
script = ExtResource("1_q7skm")

[node name="AreaCheckCanStand" type="Area2D" parent="."]

[node name="CollisionStanding" type="CollisionShape2D" parent="AreaCheckCanStand"]
position = Vector2(0, -3.5)
shape = SubResource("RectangleShape2D_pgbed")
debug_color = Color(0.529412, 0.411765, 1, 0.419608)

[node name="CollisionStanding" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_pgbed")

[node name="CollisionSitting" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_yw4nh")

[node name="Body" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2lgo5")
animation = &"standing"

[node name="EditorPixelCountHint" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="measure" type="CollisionShape2D" parent="EditorPixelCountHint"]
position = Vector2(-6.5, 12.5)
shape = SubResource("RectangleShape2D_hi6p2")
disabled = true

[node name="measure2" type="CollisionShape2D" parent="EditorPixelCountHint"]
position = Vector2(-6.5, 13.5)
shape = SubResource("RectangleShape2D_hi6p2")
disabled = true

[node name="measure3" type="CollisionShape2D" parent="EditorPixelCountHint"]
position = Vector2(-6.5, 14.5)
shape = SubResource("RectangleShape2D_hi6p2")
disabled = true

[node name="measure4" type="CollisionShape2D" parent="EditorPixelCountHint"]
position = Vector2(-6.5, 15.5)
shape = SubResource("RectangleShape2D_hi6p2")
disabled = true

[node name="measure5" type="CollisionShape2D" parent="EditorPixelCountHint"]
position = Vector2(-6.5, -14.5)
shape = SubResource("RectangleShape2D_hi6p2")
disabled = true

[node name="measure6" type="CollisionShape2D" parent="EditorPixelCountHint"]
position = Vector2(-6.5, -13.5)
shape = SubResource("RectangleShape2D_hi6p2")
disabled = true

[node name="measure7" type="CollisionShape2D" parent="EditorPixelCountHint"]
position = Vector2(-6.5, -12.5)
shape = SubResource("RectangleShape2D_hi6p2")
disabled = true

[node name="measure8" type="CollisionShape2D" parent="EditorPixelCountHint"]
position = Vector2(-6.5, -11.5)
shape = SubResource("RectangleShape2D_hi6p2")
disabled = true

[node name="measure9" type="CollisionShape2D" parent="EditorPixelCountHint"]
position = Vector2(-6.5, -9.5)
shape = SubResource("RectangleShape2D_hi6p2")
disabled = true

[node name="measure10" type="CollisionShape2D" parent="EditorPixelCountHint"]
position = Vector2(-6.5, -8.5)
shape = SubResource("RectangleShape2D_hi6p2")
disabled = true

[node name="measure11" type="CollisionShape2D" parent="EditorPixelCountHint"]
position = Vector2(-6.5, -7.5)
shape = SubResource("RectangleShape2D_hi6p2")
disabled = true

[node name="measure12" type="CollisionShape2D" parent="EditorPixelCountHint"]
position = Vector2(-6.5, -6.5)
shape = SubResource("RectangleShape2D_hi6p2")
disabled = true

[node name="measure13" type="CollisionShape2D" parent="EditorPixelCountHint"]
position = Vector2(-6.5, -10.5)
shape = SubResource("RectangleShape2D_hi6p2")
disabled = true

[node name="Arms" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(4, -4)
rotation = -0.000885808
sprite_frames = SubResource("SpriteFrames_je25u")
animation = &"gun"
offset = Vector2(-12, 4)
flip_h = true

[node name="RightArmsPosition" type="Marker2D" parent="."]
position = Vector2(-4, -4)

[node name="LeftArmsPosition" type="Marker2D" parent="."]
position = Vector2(4, -4)
